npr/bar-new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-new
spec:
  template:
    spec:
      containers:
        - name: bar-new
          image: mendhak/http-https-echo:31
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 128Mi
