npr/bar-new/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-new
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
