npr/bar-new/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-new
spec:
  ingressClassName: nginx
  rules:
    - host: bar-new.zasdaym.my.id
      http:
        paths:
          - backend:
              service:
                name: bar-new
                port:
                  number: 80
            path: /
            pathType: Prefix
